# Prediction-Market-Intelligence-Dashboard

./: .env.example  .gitignore  404.html  AGENT.md  README.md  index.html  index.txt  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.github/workflows/: ci.yml  deploy-preview.yml  deploy-production.yml  deploy.yml
api/polymarket/: debug-market  featured-market  orderbook  price-history  trades
api/research/: fivethirtyeight-presidential-averages
backend/: README.md  nixpacks.toml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/analytics/: microstructure.py  series.py
backend/app/api/: routes_analytics.py  routes_live.py  routes_polymarket.py  routes_research.py
backend/app/core/: config.py
backend/app/schemas/: analytics.py  live.py  polymarket.py  research.py
backend/app/services/: live_replay_fixtures.py  polymarket.py  research.py
backend/app/streaming/: polymarket_ws.py
backend/tests/: test_analytics.py  test_live_replay_fixtures.py  test_live_routes.py  test_microstructure.py  test_polymarket.py  test_research_routes.py
data/: state-party-support-2024.json
docs/: agent-integration-workflow.md  development-roadmap.md  fastapi-migration-roadmap.md  fastapi-wss-numpy-capability-roadmap.md
history/: index.html  index.txt
market/: index.html  index.txt
public/data/: polymarket-history-2024.json  state-party-support-2024.json
scripts/: generate-polymarket-history.mjs  generate-state-party-support.mjs
src/analytics/: correlation.ts  eventImpact.ts  leadLag.ts  liquidity.ts  momentum.ts  (+2 more)
(+113 files in other folders)
